--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ import Base from "@layouts/Base.astro"
             <Icon name="lucide:blinds" size={24} />
           </div>
           <h3 class="text-center text-3xl font-bold -tracking-wide">
-            Security Shutters
+            Permanent Lights
           </h3>
         </a>
       </section>
