--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ import Base from "@layouts/Base.astro"
           href=""
           class="hover:bg-oelo group flex flex-col items-center justify-center px-8 py-24 transition-all duration-200 hover:text-white">
           <div class="bg-oelo mb-6 rounded-lg p-4 text-white">
-            <Icon name="lucide:92683" size={24} />
+            <Icon name="lucide:lightbulb" size={24} />
           </div>
           <h3 class="text-center text-3xl font-bold -tracking-wide">
             Permanent Lights
